--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.6",
         "laravel/ui": "^3.3",
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-permission": "^6.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
